tests/base/invalid/Return_CompileFail_10.whiley
import whiley.lang.*:*

void f():
    return true
